compiler/src/snapshots/rustpython_compiler__compile__tests__if_ands.snap
---
source: compiler/src/compile.rs
expression: "compile_exec(\"if True and False and False:\\n pass\\n\")"
---
CodeObject(
  instructions: [
    LoadConst(
      idx: 0,
    ),
    JumpIfFalse(
      target: Label(0),
    ),
    LoadConst(
      idx: 1,
    ),
    JumpIfFalse(
      target: Label(0),
    ),
    LoadConst(
      idx: 2,
    ),
    JumpIfFalse(
      target: Label(0),
    ),
    LoadConst(
      idx: 3,
    ),
    ReturnValue,
  ],
  label_map: {
    Label(0): 6,
  },
  locations: [
    Location(
      row: 1,
      column: 4,
    ),
    Location(
      row: 1,
      column: 4,
    ),
    Location(
      row: 1,
      column: 13,
    ),
    Location(
      row: 1,
      column: 13,
    ),
    Location(
      row: 1,
      column: 23,
    ),
    Location(
      row: 1,
      column: 23,
    ),
    Location(
      row: 2,
      column: 2,
    ),
    Location(
      row: 2,
      column: 2,
    ),
  ],
  flags: CodeFlags(
    bits: 8,
  ),
  posonlyarg_count: 0,
  arg_names: [],
  varargs_name: None,
  kwonlyarg_names: [],
  varkeywords_name: None,
  source_path: "source_path",
  first_line_number: 0,
  obj_name: "<module>",
  constants: [
    Boolean(
      value: true,
    ),
    Boolean(
      value: false,
    ),
    Boolean(
      value: false,
    ),
    None,
  ],
)
