compiler/src/snapshots/rustpython_compiler__compile__tests__if_ors.snap
---
source: compiler/src/compile.rs
expression: "compile_exec(\"if True or False or False:\\n pass\\n\")"
---
CodeObject(
  instructions: [
    LoadConst(
      idx: 0,
    ),
    JumpIfTrue(
      target: Label(1),
    ),
    LoadConst(
      idx: 1,
    ),
    JumpIfTrue(
      target: Label(1),
    ),
    LoadConst(
      idx: 2,
    ),
    JumpIfFalse(
      target: Label(0),
    ),
    LoadConst(
      idx: 3,
    ),
    ReturnValue,
  ],
  label_map: {
    Label(0): 6,
    Label(1): 6,
  },
  locations: [
    Location(
      row: 1,
      column: 4,
    ),
    Location(
      row: 1,
      column: 4,
    ),
    Location(
      row: 1,
      column: 12,
    ),
    Location(
      row: 1,
      column: 12,
    ),
    Location(
      row: 1,
      column: 21,
    ),
    Location(
      row: 1,
      column: 21,
    ),
    Location(
      row: 2,
      column: 2,
    ),
    Location(
      row: 2,
      column: 2,
    ),
  ],
  flags: CodeFlags(
    bits: 8,
  ),
  posonlyarg_count: 0,
  arg_names: [],
  varargs_name: None,
  kwonlyarg_names: [],
  varkeywords_name: None,
  source_path: "source_path",
  first_line_number: 0,
  obj_name: "<module>",
  constants: [
    Boolean(
      value: true,
    ),
    Boolean(
      value: false,
    ),
    Boolean(
      value: false,
    ),
    None,
  ],
)
